-evento de ok en el snackbar del home cuando hay un error, no se esta eliminando. -cuando hay un mensaje sistematico no deben aparecen burbujas de conteo de mensajes ni puntos de estado del mensaje.

--- a/app/src/main/res/layout/home_fragment_item.xml
+++ b/app/src/main/res/layout/home_fragment_item.xml
@@ -71,6 +71,7 @@
             app:layout_constraintEnd_toEndOf="@id/textView_hora"
             app:layout_constraintTop_toTopOf="@+id/linear_container"
             app:unreadMessages="@{conversation.messagesUnReads}"
+            app:typeMessage="@{conversation.message.messageType}"
             tools:text="100"
             tools:visibility="visible" />
 
