Arreglo de margenes de item de usuario

--- a/app/src/main/res/layout/contacts_item.xml
+++ b/app/src/main/res/layout/contacts_item.xml
@@ -30,8 +30,8 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginStart="@dimen/normal_margin"
-            android:layout_marginTop="@dimen/normal_margin"
-            android:layout_marginBottom="@dimen/normal_margin"
+            android:layout_marginTop="@dimen/small_margin"
+            android:layout_marginBottom="@dimen/small_margin"
             android:background="@drawable/border_avatar_contact"
             app:avatar="@{contact}"
             tools:scaleType="fitCenter"
