--- a/app/src/main/res/layout/blocked_contacts_item.xml
+++ b/app/src/main/res/layout/blocked_contacts_item.xml
@@ -20,14 +20,11 @@
         android:background="@drawable/bg_home_item"
         android:foreground="?attr/selectableItemBackground"
         android:onClick="@{() -> clickListener.onClick(contact)}"
-        android:padding="@dimen/normal_padding"
         app:layout_constraintVertical_chainStyle="packed">
 
         <ImageView
             android:id="@+id/imageView_user_image"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:background="@drawable/border_avatar_contact"
+            style="@style/imageAvatarItem"
             app:avatar="@{contact}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/normal_margin"
+            android:layout_marginEnd="@dimen/normal_margin"
             android:ellipsize="end"
             android:lines="1"
             app:layout_constraintBottom_toTopOf="@+id/textView_user_nickname"
@@ -56,13 +54,15 @@
             style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/normal_margin"
+            android:layout_marginEnd="@dimen/normal_margin"
             android:ellipsize="end"
             android:lines="1"
             android:textColor="?attr/attrColorButtonTint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/button_more"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="@id/textView_user_name"
+            app:layout_constraintStart_toEndOf="@id/imageView_user_image"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
             app:nickname="@{contact}"
             tools:text="@tools:sample/first_names" />
@@ -71,7 +71,9 @@
             android:id="@+id/button_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/normal_margin"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="@dimen/x_small_padding"
             android:tint="@color/colorSecondaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
