--- a/app/src/main/res/layout/napoleon_keyboard_gif_fragment.xml
+++ b/app/src/main/res/layout/napoleon_keyboard_gif_fragment.xml
@@ -90,7 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/normal_margin"
-                    android:text="Descargando Gif|!!"
+                    android:text="@string/text_download_gif"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/progressBar" />
