--- a/app/src/main/res/values-pt/blocked_contacts.xml
+++ b/app/src/main/res/values-pt/blocked_contacts.xml
@@ -3,7 +3,7 @@
     <string name="text_blocked_contacts_info">Os contatos nesta lista não poderão se comunicar com você ou acessar seu perfil.</string>
     <string name="text_empty_state_blocked_contacts_title">Contactos bloqueados</string>
     <string name="text_empty_state_blocked_contacts_description">Não possui contatos bloqueados</string>
-    <string name="text_blocked_contact_not_found">Ups! Tu búsqueda no trajo resultados</string>
+    <string name="text_blocked_contact_not_found">Ops! Sua pesquisa não produziu resultados</string>
     <string name="text_wish_unblock_contact">Deseja desbloquear este contato?</string>
     <string name="text_unblocked_contact">Contacto desbloqueado</string>
 </resources>
