--- a/app/src/main/res/layout/custom_input_panel_quote.xml
+++ b/app/src/main/res/layout/custom_input_panel_quote.xml
@@ -79,7 +79,8 @@
             android:tint="@color/gray_8B8989"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
