--- a/app/src/main/res/drawable/bg_my_giphy.xml
+++ b/app/src/main/res/drawable/bg_my_giphy.xml
@@ -3,5 +3,6 @@
     android:shape="rectangle">
     <solid android:color="@color/black_40" />
     <corners
-        android:topLeftRadius="@dimen/small_radius" />
+        android:topLeftRadius="@dimen/small_radius"
+        android:bottomRightRadius="6dp"/>
 </shape>
