--- a/app/src/main/res/layout/custom_input_panel_widget.xml
+++ b/app/src/main/res/layout/custom_input_panel_widget.xml
@@ -67,19 +67,30 @@
                             android:layout_height="wrap_content"
                             android:clipChildren="false"
                             android:clipToPadding="false"
-                            android:gravity="center_vertical"
                             android:minHeight="@dimen/conversation_fab_size"
                             android:orientation="horizontal">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="@dimen/conversation_fab_size"
+                                android:layout_gravity="bottom"
+                                android:clipChildren="false"
+                                android:clipToPadding="false"
+                                android:orientation="horizontal">
 
                             <ImageButton
                                 android:id="@+id/imageButton_emoji"
                                 style="@style/OptionEndIcon"
+                                android:layout_gravity="center_vertical"
                                 android:src="@drawable/ic_insert_emoticon_black" />
+
+                        </LinearLayout>
 
                             <androidx.emoji.widget.EmojiAppCompatEditText
                                 android:id="@+id/textInputEditText_input"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
                                 android:layout_marginStart="@dimen/small_margin"
                                 android:layout_marginEnd="@dimen/small_padding"
                                 android:layout_weight="1"
@@ -107,8 +118,8 @@
                                 <LinearLayout
                                     android:id="@+id/container_action_input"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="match_parent"
-                                    android:layout_gravity="end"
+                                    android:layout_height="@dimen/conversation_fab_size"
+                                    android:layout_gravity="end|bottom"
                                     android:animateLayoutChanges="true"
                                     android:clipChildren="false"
                                     android:clipToPadding="false"
