--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1238,6 +1238,35 @@
         <item name="android:background">@drawable/bg_incoming_message</item>
     </style>
 
+    <style name="ButtonState">
+        <item name="android:layout_width">36dp</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:layout_margin">@dimen/small_margin</item>
+        <item name="android:padding">@dimen/x_small_padding</item>
+        <item name="android:background">@drawable/bg_black_40</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:tint">@color/white</item>
+    </style>
+    
+    <style name="CircleProgressBar">
+        <item name="android:layout_width">35dp</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:visibility">gone</item>
+        <item name="progressbarColor">?attr/attrTintProgressBar</item>
+        <item name="progressBarThickness">3dp</item>
+        <item name="progress">0</item>
+    </style>
+    
+    <style name="ProgressIndeterminate">
+        <item name="android:layout_width">43dp</item>
+        <item name="android:layout_height">43dp</item>
+        <item name="android:indeterminate">true</item>
+        <item name="android:progressBackgroundTint">?attr/attrSeekbarProgressTint</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
     <style name="QuoteConversation">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
