-Evento de backstack cuando mi contacto me elimina o me bloquea. -Cuando se esta grabando un audio y entra una llamada o video llamada debe enviar la nota de audio hasta donde iba. -Se quito animacion cuando se agregan diferentes contactos por molestia en items diferentes al seleccionado.

--- a/app/src/main/res/layout/add_contact_item.xml
+++ b/app/src/main/res/layout/add_contact_item.xml
@@ -82,7 +82,7 @@
                     android:textAlignment="textStart"
                     android:textAllCaps="true"
                     app:haveFriendshipRequest="@{contact.haveFriendshipRequest}"
-                    app:icon="@drawable/anim_add_to_check" />
+                    app:icon="@drawable/ic_add_primary" />
 
                 <ProgressBar
                     android:id="@+id/progressBar"
